feat(go): fix
