# desc/swagger/goServerlessVercel.swagger.json
@@ -36,9 +36,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/Badge"
-            }
+            "schema": {}
           }
         },
         "parameters": [
